Ex01HeadingsDivs.html deleted some unused tags

--- a/HTMLCSS/Homeworks/HTMLIntroHW/HTMLIntroHW/Ex01HeadingsDivs.html
+++ b/HTMLCSS/Homeworks/HTMLIntroHW/HTMLIntroHW/Ex01HeadingsDivs.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+    <meta charset="utf-8" />
     <style type="text/css">
         ul {
             list-style-type: none;
@@ -22,9 +23,9 @@
     </header>
 
     <section>
-        <h1 style="font-size:35px;"><b>Welcome to Runners Home<sup>&trade;</sup></b></h1>
+        <h1 style="font-size:35px;">Welcome to Runners Home&trade;</h1>
         <div>
-            Runners Home<sup>&trade;</sup> is dedicated to providing you with:
+            Runners Home&trade; is dedicated to providing you with:
             <ul style="margin-top:0px; margin-bottom:20px;">
                 <li>the most up-to-date information on running races</li>
                 <li>the best ressources for runners</li>
