Task 4 fully solved

--- a/HTMLCSS/Homeworks/CSSLayoutHW/Ex04CSSTutorial/Ex04CSSTutorial.html
+++ b/HTMLCSS/Homeworks/CSSLayoutHW/Ex04CSSTutorial/Ex04CSSTutorial.html
@@ -72,7 +72,7 @@
             <a href="#">W3Schools Forum</a>
         </div>
         <div>
-            <img src="" alt="25Styles" />
+            <img src="25Styles.png" alt="25Styles" />
             <a href="#">Dynamic button image generation</a>
         </div>
         <div>
