Task1 solved with !important

--- a/HTMLCSS/Homeworks/SnDResponsiveDesignHW/Task1/task1.html
+++ b/HTMLCSS/Homeworks/SnDResponsiveDesignHW/Task1/task1.html
@@ -6,7 +6,7 @@
         Responsive Design - Task 1
     </title>
     <link rel="stylesheet" type="text/css" href="styles/task1.css">
-    <link rel="stylesheet" type="text/css" href="styles/myTask1.css">
+    <link href="styles/Task1Responsive.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -128,17 +128,17 @@
                     <h1>
                         Article 1
                     </h1>
-                </header>  
-                    <div class="article-content">
-                        <img src="images/pc-1.png" />
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam lobortis
-                            luctus aliquet. Phasellus fermentum odio enim. Fusce eu arcu justo, non
-                            pellentesque ligula. Nam eget diam dui. Aliquam tellus massa, pretium quis
-                            gravida non, cursus a velit. In accumsan vulputate mi, in viverra lorem
-                            auctor ut. Duis adipiscing venenatis tempus
-                        </p>
-                    </div>              
+                </header>
+                <div class="article-content">
+                    <img src="images/pc-1.png" />
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam lobortis
+                        luctus aliquet. Phasellus fermentum odio enim. Fusce eu arcu justo, non
+                        pellentesque ligula. Nam eget diam dui. Aliquam tellus massa, pretium quis
+                        gravida non, cursus a velit. In accumsan vulputate mi, in viverra lorem
+                        auctor ut. Duis adipiscing venenatis tempus
+                    </p>
+                </div>
             </article>
             <article>
                 <header>
@@ -146,16 +146,16 @@
                         Article 2
                     </h1>
                 </header>
-                    <div class="article-content">
-                        <img src="images/pc-2.png" />
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam lobortis
-                            luctus aliquet. Phasellus fermentum odio enim. Fusce eu arcu justo, non
-                            pellentesque ligula. Nam eget diam dui. Aliquam tellus massa, pretium quis
-                            gravida non, cursus a velit. In accumsan vulputate mi, in viverra lorem
-                            auctor ut. Duis adipiscing venenatis tempus
-                        </p>
-                    </div>
+                <div class="article-content">
+                    <img src="images/pc-2.png" />
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam lobortis
+                        luctus aliquet. Phasellus fermentum odio enim. Fusce eu arcu justo, non
+                        pellentesque ligula. Nam eget diam dui. Aliquam tellus massa, pretium quis
+                        gravida non, cursus a velit. In accumsan vulputate mi, in viverra lorem
+                        auctor ut. Duis adipiscing venenatis tempus
+                    </p>
+                </div>
             </article>
             <article>
                 <header>
@@ -163,16 +163,16 @@
                         Article 3
                     </h1>
                 </header>
-                    <div class="article-content">
-                        <img src="images/trash-bin.png" />
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam lobortis
-                            luctus aliquet. Phasellus fermentum odio enim. Fusce eu arcu justo, non
-                            pellentesque ligula. Nam eget diam dui. Aliquam tellus massa, pretium quis
-                            gravida non, cursus a velit. In accumsan vulputate mi, in viverra lorem
-                            auctor ut. Duis adipiscing venenatis tempus
-                        </p>
-                    </div>
+                <div class="article-content">
+                    <img src="images/trash-bin.png" />
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam lobortis
+                        luctus aliquet. Phasellus fermentum odio enim. Fusce eu arcu justo, non
+                        pellentesque ligula. Nam eget diam dui. Aliquam tellus massa, pretium quis
+                        gravida non, cursus a velit. In accumsan vulputate mi, in viverra lorem
+                        auctor ut. Duis adipiscing venenatis tempus
+                    </p>
+                </div>
             </article>
         </section>
         <footer>
