--- a/HTMLCSS/Homeworks/SnDResponsiveDesignHW/Task2/task2.html
+++ b/HTMLCSS/Homeworks/SnDResponsiveDesignHW/Task2/task2.html
@@ -6,7 +6,7 @@
         Responsive Design - All together
     </title>
     <link href="styles/task2.css" rel="stylesheet" />
-    <link href="styles/Task2Responsive.css" rel="stylesheet" />
+   <!-- <link href="styles/Task2Responsive.css" rel="stylesheet" />-->
 </head>
 
 <body>
