--- a/HTMLCSS/Homeworks/SnDResponsiveDesignHW/Task2/task2.html
+++ b/HTMLCSS/Homeworks/SnDResponsiveDesignHW/Task2/task2.html
@@ -208,6 +208,7 @@
             </h2>
         </footer>
     </div>
+    <script src="js/reload.js" type="text/javascript"></script>
 </body>
 
 </html>
