--- a/HTMLCSS/Homeworks/ExamPrep/SampleExam/CSSSampleExamPrep/WebApplication1/task1.html
+++ b/HTMLCSS/Homeworks/ExamPrep/SampleExam/CSSSampleExamPrep/WebApplication1/task1.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<title></title>
-	<meta http-equiv=”refresh” content=”5" >
+    <!--<meta http-equiv="refresh" content="3">-->
 	<link href="task1.css" rel="stylesheet" />
 	<script src="jquery-1.9.0.js"></script>
 	<script>
